# ecko-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  sample.env
ecko_cli/: __init__.py  __main__.py  analyze.py  cli.py  helpers.py  images.py
ecko_cli/models/: selected_tags.csv
tests/: test_main.py
